meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__memory__test__get_memory_metrics.snap
---
source: memfaultd/src/metrics/system_metrics/memory.rs
assertion_line: 312
expression: "MemInfoParserImpl::parse_meminfo_stats(meminfo)"
---
{
  "Active": 22188032.0,
  "AnonPages": 19955712.0,
  "Buffers": 4653056.0,
  "Cached": 53379072.0,
  "CmaFree": 16384000.0,
  "CmaTotal": 16777216.0,
  "Dirty": 0.0,
  "Inactive": 52637696.0,
  "KReclaimable": 14364672.0,
  "KernelStack": 1949696.0,
  "Mapped": 30380032.0,
  "MemAvailable": 299098112.0,
  "MemFree": 248090624.0,
  "MemTotal": 374697984.0,
  "Mlocked": 0.0,
  "SReclaimable": 15269888.0,
  "SUnreclaim": 18952192.0,
  "Shmem": 11534336.0,
  "Slab": 34222080.0,
  "SwapCached": 0.0,
  "SwapFree": 0.0,
  "SwapTotal": 0.0,
  "Unevictable": 3145728.0,
  "Writeback": 0.0
}
